--- a/web/resume/index.html
+++ b/web/resume/index.html
@@ -32,7 +32,7 @@
                 <div class="resume-summary mt-4">
                     <h2 class="ff-libre">Summary</h2>
                     <p>
-                        Highly accomplished <strong class="job_title_element">Solutions Architect & Tech Lead</strong> with 15+ years of experience in <strong>designing, architecting, and implementing scalable web solutions</strong>. I excel at <strong>bridging technical complexities with elegant user experiences</strong>, leading cross-functional teams, and driving end-to-end project delivery from <strong>strategic architectural design</strong> to flawless deployment and client engagement. My background in graphic and UI/UX design fuels my passion for <strong>creating intuitive, high-performance, and user-centric systems</strong> that truly exceed business objectives.
+                        With 15+ years of experience in <strong>designing, architecting, and implementing scalable web solutions</strong>. I excel at <strong>bridging technical complexities with elegant user experiences</strong>, leading cross-functional teams, and driving end-to-end project delivery from <strong>strategic architectural design</strong> to flawless deployment and client engagement. My background in graphic and UI/UX design fuels my passion for <strong>creating intuitive, high-performance, and user-centric systems</strong> that truly exceed business objectives.
                     </p>
                 </div>
 
