--- a/web/sandbox/dyn-figure/index.html
+++ b/web/sandbox/dyn-figure/index.html
@@ -8,8 +8,8 @@
     svg  { display:block; width:100vw; height:100vh; }
     polygon { fill:none; stroke:#fff; stroke-width:10; }
     line    { stroke:#fff; stroke-width:5; }
-    line:nth-child(even) { stroke:#f00; }
-    line:nth-child(odd) { stroke:#0f0; }
+    line:nth-child(even) { stroke:#fff; }
+    line:nth-child(odd) { stroke:#fff; }
   </style>
 </head>
 <body>
