--- a/web/sandbox/index.html
+++ b/web/sandbox/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sandbox</title>
+
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack.css'>
 </head>
 <body>
     
@@ -12,40 +18,49 @@
             
             <div class="col-12">
                 <ul>
+                    <li>
+                        <a href="./translate/">Translation experiment</a> <span>2025.08.25</span>
+                        <p>Playing with the openai api, for content generation, with dynamic language detection and content relation.</p>
+                    </li>
+                    <li>
+                        <a href="./grid-intro/">The grid</a> <span>2025.07.20</span>
+                        <p>Three.js exploration, tron tribute</p>
+                    </li>
                      <li>
-                        <a href="./dyn-figure">Dynamic Logo</a> <span>2025.07.17</span>
-                        <p>Dynamic logo generator idea</p>
+                        <a href="./dyn-figure">Dynamic Triangle</a> <span>2025.07.17</span>
+                        <p>SVG Generation and manipulation with js</p>
                     </li>
                     <li>
                         <a href="./imageopt">Image Optimizer</a> <span>2025.07.16</span>
+                        <p>This should be an image converter, optimizer with imagick, this is broken</p>
                     </li>
                     <li>
                         <a href="./oscilloscope/">Oscilloscope</a> <span>2025.07.10</span>
-                        <p class="mt-0">Oscilloscope in javascript, to understand how they work</p>
+                        <p class="mt-0">Oscilloscope in javascript, mostly chatpgt on this one, to understand how they work</p>
                     </li>
                     <li>
                         <a href="./placeholder">Placeholder</a> <span>2025.07.09</span>
-                        <p class="mt-0">Image generator with PHP API</p>
+                        <p class="mt-0">Image processing and generation with a PHP API</p>
                     </li>
                     <li>
                         <a href="./noise-gen/">Noise Generator</a>
                         <span>2025.07.08</span>
-                        <p class="mt-0">Noise texture generator for CSS</p>
+                        <p class="mt-0">SVG Noise texture generator for CSS</p>
                     </li>
                     <li>
                         <a href="./pantone/">Pantone</a>
-                        <span>2025.07.01</span>
-                        <p class="mt-0">Parametrized gradient background generator on elements specified elements</p>
+                        <span>2025.06.01</span>
+                        <p class="mt-0">Parametrized gradient background generator on specified elements groups</p>
                     </li>
                     <li>
-                        <a href="./visual-audio-processing/">Visual Audio Processing</a>
-                        <span>2025.06.15</span>
-                        <p class="mt-0">Simple implementation to understand audio processing with P5.js library</p>
+                        <a href="./visual-audio-processing/">Audio Visualization</a>
+                        <span>2025.04.15</span>
+                        <p class="mt-0">Idea implementation to understand audio visualiztion with P5.js library</p>
                     </li>
                     <li>
                         <a href="./honorarios/">Honorarios Calculator</a>
                         <span>2025.01.01</span>
-                        <p class="mt-0">Calculator for mexican invoices with isr/iva retentions.</p>
+                        <p class="mt-0">Simple Calculator for mexican invoices with isr/iva retentions.</p>
                     </li>
                 </ul>
             </div>
