--- a/web/sandbox/placeholder/index.html
+++ b/web/sandbox/placeholder/index.html
@@ -63,7 +63,7 @@
 
   <div class="example">
     <h3>1. Imagen básica (600x300)</h3>
-    <code>https://horacio.xyz/sandbox/placeholder/gen?width=600&height=300</code>
+    <code>https://horacio.xyz/sandbox/placeholder/gen.php?width=600&height=300</code>
     <img src="./gen.php?width=600&height=300" alt="Ejemplo 1">
   </div>
 
@@ -75,25 +75,25 @@
 
   <div class="example">
     <h3>3. Formato SVG (vectorial)</h3>
-    <code>https://horacio.xyz/sandbox/placeholder/gen?width=400&height=200&format=svg&text=Escalable</code>
+    <code>https://horacio.xyz/sandbox/placeholder/gen.php?width=400&height=200&format=svg&text=Escalable</code>
     <img src="./gen.php?width=400&height=200&format=svg&text=Escalable" alt="Ejemplo SVG">
   </div>
 
   <div class="example">
     <h3>4. Alineación derecha + fuente Verdana</h3>
-    <code>https://horacio.xyz/sandbox/placeholder/gen?width=500&height=150&align=right&text=Texto+a+la+derecha&font=verdana</code>
+    <code>https://horacio.xyz/sandbox/placeholder/gen.php?width=500&height=150&align=right&text=Texto+a+la+derecha&font=verdana</code>
     <img src="./gen.php?width=500&height=150&align=right&text=Texto+a+la+derecha&font=verdana" alt="Ejemplo Alineado">
   </div>
 
   <div class="example">
     <h3>5. Imagen con transparencia</h3>
-    <code>https://horacio.xyz/sandbox/placeholder/gen?width=400&height=200&bg=000000&color=ffffff&text=Alpha+30%&alpha=0.3</code>
+    <code>https://horacio.xyz/sandbox/placeholder/gen.php?width=400&height=200&bg=000000&color=ffffff&text=Alpha+30%&alpha=0.3</code>
     <img src="./gen.php?width=400&height=200&bg=000000&color=ffffff&text=Alpha+30%25&alpha=0.3" alt="Ejemplo Alpha">
   </div>
 
   <div class="example">
     <h3>6. Imagen JPG + fuente Comic Sans</h3>
-    <code>https://horacio.xyz/sandbox/placeholder/gen?width=400&height=200&format=jpg&font=comic&text=Formato+JPG</code>
+    <code>https://horacio.xyz/sandbox/placeholder/gen.php?width=400&height=200&format=jpg&font=comic&text=Formato+JPG</code>
     <img src="./gen.php?width=400&height=200&format=jpg&font=comic&text=Formato+JPG" alt="Ejemplo JPG">
   </div>
 
@@ -103,7 +103,7 @@
   </p>
   <code>
     
-    &lt;img src="https://horacio.xyz/sandbox/placeholder/gen?width=300&amp;height=150&amp;text=Hola"&gt;
+    &lt;img src="https://horacio.xyz/sandbox/placeholder/gen.php?width=300&amp;height=150&amp;text=Hola"&gt;
   </code>
 </body>
 </html>
