--- a/web/sandbox/translate/index.html
+++ b/web/sandbox/translate/index.html
@@ -17,8 +17,8 @@
     <main id="main-content" tabindex="-1">
       <p id="description"></p>
       <form id="search-form">
-        <input type="text" id="search" placeholder="Buscar video en YouTube">
-        <button type="submit" id="submit">Buscar</button>
+        <input type="text" id="search" placeholder="Look for a youtube video">
+        <button type="submit" id="submit"><img src="/assets/images/search.png"></button>
       </form>
       <div id="result"></div>
       <div id="relevant_data"></div>
