corrections and spinner

--- a/web/resume/index.html
+++ b/web/resume/index.html
@@ -9,6 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack.css'>
+    <style>
+        @page{ 
+            size: auto;   /* auto is the initial value */ 
+
+            /* this affects the margin in the printer settings */ 
+            margin: 25mm 20mm 25mm 20mm;  
+        } 
+        </style>
 </head>
 <body class="resume">
     <div class="row d-none-print">
@@ -32,14 +40,14 @@
                 <div class="resume-summary mt-4">
                     <h2 class="ff-libre">Summary</h2>
                     <p>
-                        With 15+ years of experience in <strong>designing, architecting, and implementing scalable web solutions</strong>. I excel at <strong>bridging technical complexities with elegant user experiences</strong>, leading cross-functional teams, and driving end-to-end project delivery from <strong>strategic architectural design</strong> to flawless deployment and client engagement. My background in graphic and UI/UX design fuels my passion for <strong>creating intuitive, high-performance, and user-centric systems</strong> that truly exceed business objectives.
+                        With 15+ years of experience in <strong>designing, and build scalable web solutions</strong>. I excel at <strong>bridging technical complexities with elegant user experiences</strong>, leading cross-functional teams, and driving end-to-end project delivery from <strong>strategic architectural design</strong> to flawless deployment and client engagement. My background in graphic and UI/UX design allows me to <strong>create intuitive, high-performance, and user-centric systems</strong> that truly exceed business objectives.
                     </p>
                 </div>
 
                 <div class="resume-experience">
                     <h2 class="ff-libre mt-5">Experience</h2>
 
-                    <div class="job-entry mb-5">
+                    <div class="job-entry mb-4">
                         <strong class="d-block mb-1 fs-14">Freelance Solutions Architect & Web Developer</strong>
                         <p class="fw-normal mb-1">monocromatico, Mexico City, MX</p>
                         <p class="fw-normal color-gray">October 2008 – Present</p>
@@ -54,7 +62,7 @@
                         </ul>
                     </div>
 
-                    <div class="job-entry mb-5">
+                    <div class="job-entry mb-4">
                         <strong class="d-block mb-1 fs-14">UI Lead Development, Tech Lead</strong>
                         <p class="fw-normal mb-1">Indegene, GMI, Mexico City, MX</p>
                         <p class="fw-normal color-gray">May 2022 – February 2025</p>
@@ -64,12 +72,10 @@
                         <ul>
                             <li>Developed and <strong>optimized UI/UX workflows</strong> for modern web applications, enhancing development efficiency and user engagement.</li>
                             <li>Ensured strict adherence to <strong>WCAG accessibility</strong> and <strong>performance standards</strong>, significantly improving user experience.</li>
-                            <li>Conducted <strong>rigorous code reviews</strong> and <strong>mentored junior and mid-level developers</strong>, fostering a culture of technical excellence.</li>
-                            <li>Staying updated on front-end trends to drive innovation.</li>
                         </ul>
                     </div>
 
-                    <div class="job-entry mb-5">
+                    <div class="job-entry mb-4">
                         <strong class="d-block mb-1 fs-14">Tech Lead Web UX/UI & Development</strong>
                         <p class="fw-normal mb-1">Gonet Mexico (Orion Innovation), Mexico City, MX</p>
                         <p class="fw-normal color-gray">January 2019 – May 2022</p>
@@ -77,14 +83,13 @@
                             Defined and implemented strategies to address complex technical, creative, and usability challenges. Collaborated with UI/UX and development teams to deliver seamless solutions. Key achievements include:
                         </p>
                         <ul>
-                            <li><strong>Architected and launched a Drupal+React/Next.js decoupled web solution for Starbucks LATAM</strong>, improving scalability and user experience.</li>
+                            <li><strong>Led and launched a Drupal+React/Next.js decoupled web solution for Starbucks LATAM</strong>, improving scalability and user experience.</li>
                             <li>Provided <strong>technical leadership</strong> for Grupo Salinas' BAZ Superapp, coordinating with over 500 stakeholders to ensure successful integration and delivery.</li>
                             <li>Supported pre-sales efforts for Starbucks UK, including <strong>technical proposals and documentation</strong>, demonstrating strong client-facing and business development skills.</li>
-                            <li>Mentored junior team members and enhanced team capabilities.</li>
                         </ul>
                     </div>
 
-                    <div class="job-entry mb-5">
+                    <div class="job-entry mb-4">
                         <strong class="d-block mb-1 fs-14">Sr UX/UI Designer & Sr Drupal Engineer</strong>
                         <p class="fw-normal mb-1">Gonet Mexico, Mexico City, MX</p>
                         <p class="fw-normal color-gray">January 2017 – January 2019</p>
@@ -98,7 +103,7 @@
                         </ul>
                     </div>
 
-                    <div class="job-entry mb-5">
+                    <div class="job-entry mb-4">
                         <strong class="d-block mb-1 fs-14">Full Stack Developer</strong>
                         <p class="fw-normal mb-1">Gonet Mexico, Mexico City, MX</p>
                         <p class="fw-normal color-gray">October 2015 – January 2017</p>
@@ -107,7 +112,7 @@
                         </p>
                     </div>
 
-                    <div class="job-entry mb-5">
+                    <div class="job-entry mb-4">
                         <strong class="d-block mb-1 fs-14">Designer & Front-End Drupal Developer</strong>
                         <p class="fw-normal mb-1">Sensis Agency, Mexico City, MX</p>
                         <p class="fw-normal color-gray">December 2012 – October 2015</p>
@@ -125,19 +130,19 @@
 
                 <div class="resume-skills">
                     <h2 class="ff-libre mt-5">Skills & Tools</h2>
+            
                     <ul>
-                        <li><strong>Solutions Architecture & System Design:</strong> System Design & Integration, Scalable Web Architectures, Microservices & Decoupled Architectures, Technical Consulting, Requirements Elicitation.</li>
-                        <li><strong>Cloud & DevOps:</strong> Cloud Architecture (AWS, Azure, Linode), CI/CD Integration & Deployment (Github Actions, Gitlab, Azure Devops, AWS Code Pipeline).</li>
-                    </ul>
-                        <strong>Web Development (Full-Stack):</strong>
-                    <ul>
+                        <li><strong>Creative & UI/UX Design:</strong> UI/UX Strategy & Execution, Prototyping, Wireframing, User Research, Information Architecture, Interaction Design (Figma, Adobe XD, Sketch).</li>
                         <li><strong>Front-end:</strong> HTML, CSS, SASS, JavaScript, jQuery, React, Angular, Vue, Next.js.</li>
                         <li><strong>Back-end:</strong> Drupal (6 to 11), PHP, Symfony, Laravel, .Net, Django, RoR.</li>
-                        <li><strong>Creative & UI/UX Design:</strong> UI/UX Strategy & Execution, Prototyping, Wireframing, User Research, Information Architecture, Interaction Design (Figma, Adobe XD, Sketch).</li>
                         <li><strong>Performance & Quality Standards:</strong> Performance Optimization, Web Accessibility (WCAG, WAI-ARIA), Security Best Practices.</li>
                         <li><strong>Project Management & Leadership:</strong> Agile Methodologies, Team Leadership, Mentoring (Jira, Trello).</li>
                         <li><strong>Analytics:</strong> Advanced Implementation Analytics (Google Analytics, Google Tag Manager, Goat Counter).</li>
                         <li><strong>AI Tools:</strong> AI-Powered Development (ChatGPT, Copilot, Claude, Gemini, Cursor).</li>
+                    </ul>
+                    <ul>
+                        <li><strong>Solutions Architecture & System Design:</strong> System Design & Integration, Scalable Web Architectures, Microservices & Decoupled Architectures, Technical Consulting, Requirements Elicitation.</li>
+                        <li><strong>Cloud & DevOps:</strong> Cloud Architecture (AWS, Azure, Linode), CI/CD Integration & Deployment (Github Actions, Gitlab, Azure Devops, AWS Code Pipeline).</li>
                     </ul>
                 </div>
             </div></div>
@@ -155,7 +160,7 @@
 
     //script to get from query string  job title rewrite
     var url_params = new URLSearchParams(window.location.search);
-    var job_title = urlParams.get('jobtitle');
+    var job_title = url_params.get('jobtitle');
     //console.log("Job Title from URL: ", job_title);
     var job_title_element = document.querySelectorAll('.job_title_element');
 
