--- a/web/sandbox/translate/index.html
+++ b/web/sandbox/translate/index.html
@@ -21,6 +21,9 @@
         <button type="submit" id="submit"><img src="/assets/images/search.png"></button>
       </form>
       <div id="result"></div>
+      <div id="loader" style="display:none;">
+      <div class="spinner"></div>
+    </div>
       <div id="relevant_data"></div>
       <div id="artist"></div>
       <div id="production"></div>
