corrections and spinner

--- a/web/sandbox/index.html
+++ b/web/sandbox/index.html
@@ -32,7 +32,7 @@
                     </li>
                     <li>
                         <a href="./imageopt">Image Optimizer</a> <span>2025.07.16</span>
-                        <p>This should be an image converter, optimizer with imagick, this is broken</p>
+                        <p>This should be an image converter, optimizer with image gd, this is broken</p>
                     </li>
                     <li>
                         <a href="./oscilloscope/">Oscilloscope</a> <span>2025.07.10</span>
@@ -40,7 +40,7 @@
                     </li>
                     <li>
                         <a href="./placeholder">Placeholder</a> <span>2025.07.09</span>
-                        <p class="mt-0">Image processing and generation with a PHP API</p>
+                        <p class="mt-0">Image processing and generation with image gd</p>
                     </li>
                     <li>
                         <a href="./noise-gen/">Noise Generator</a>
