--- a/web/sandbox/translate/index.html
+++ b/web/sandbox/translate/index.html
@@ -32,6 +32,9 @@
       <div id="recommendations"></div>
 
   <!-- Scripts -->
+   <script>
+	window.YT_API_KEY = "<?php echo getenv('YOUTUBE_API_KEY'); ?>";
+</script>
  <script type="module" src="./app.js"></script>
       
     </main>
