--- a/web/sandbox/dynamic-viewports/index.html
+++ b/web/sandbox/dynamic-viewports/index.html
@@ -15,15 +15,27 @@
         .wrapper {
             padding: 20px;
         }
+
+        .dv-box{
+            height: 100dvh;
+            background: tomato;
+        }
+        .vh-box {
+            height: 100vh;
+            background: limegreen;
+        }
     </style>
 </head>
 <body>
     <div class="wrapper">
+        <div class="vh-box">Soy 100vh</div>
+        <div class="dvh-box">Soy 100dvh</div>
+<!--
         <h1>Dynamic Viewport Testing</h1>
         <p>This is a test page for dynamic viewport handling</p>
         <a href="index2.html">Compare traditional VH</a>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nam laborum, quia nemo non mollitia, accusamus blanditiis fuga tempore illum totam ullam atque rem incidunt aspernatur voluptatibus, natus nisi tenetur commodi aliquam similique harum ducimus? Placeat optio laboriosam iste, architecto provident rem repudiandae adipisci cumque fuga est! Omnis explicabo atque culpa quos illum! Dignissimos fugiat laudantium ab accusantium dicta dolores nemo, exercitationem molestiae dolor aspernatur, adipisci odio temporibus aperiam nisi possimus! Numquam, tempora aut? Doloribus maxime mollitia sunt nemo labore, beatae voluptate perspiciatis ipsum? Facilis, totam beatae voluptates enim fugit iure consequuntur corrupti iusto dolores neque harum possimus ea aliquid deleniti aspernatur, doloribus magni ratione blanditiis a voluptatem repellat ducimus asperiores repellendus id. Amet molestiae blanditiis doloremque, sapiente eaque vero vitae itaque, illo deleniti hic quisquam nesciunt? Dolorum provident, quibusdam praesentium exercitationem maiores incidunt numquam, voluptas delectus suscipit dolorem quasi est mollitia inventore, tenetur molestias aspernatur. Facere error ipsa autem libero atque quam repudiandae exercitationem quidem perferendis ratione id nisi repellendus delectus nesciunt fugit aliquam neque sapiente debitis, odio, laudantium, rem unde harum? Aut accusamus impedit laudantium nostrum et qui fuga quod explicabo nulla, delectus soluta optio nemo, aspernatur, esse sunt! Modi reprehenderit corporis officia alias! Ex perferendis maxime commodi!</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam, molestiae illo. Voluptate commodi quasi aut voluptatibus repellat dolores magni recusandae. Ipsum explicabo, aperiam consectetur aliquid eveniet atque pariatur omnis cumque odio ipsa cum laborum deleniti ab delectus nihil facilis quibusdam voluptate! Quidem ea mollitia laborum. Explicabo voluptatibus et fugit, consequatur nesciunt perferendis officia cumque sed veritatis nemo inventore doloribus pariatur animi culpa dolore omnis perspiciatis asperiores. Quod at praesentium aperiam iure! Saepe, soluta dolorum dolorem magni autem reiciendis dignissimos laboriosam nisi at. Quas qui autem ipsum dolor, nostrum possimus amet saepe corrupti. Dignissimos atque soluta delectus perspiciatis aut libero iste?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam, molestiae illo. Voluptate commodi quasi aut voluptatibus repellat dolores magni recusandae. Ipsum explicabo, aperiam consectetur aliquid eveniet atque pariatur omnis cumque odio ipsa cum laborum deleniti ab delectus nihil facilis quibusdam voluptate! Quidem ea mollitia laborum. Explicabo voluptatibus et fugit, consequatur nesciunt perferendis officia cumque sed veritatis nemo inventore doloribus pariatur animi culpa dolore omnis perspiciatis asperiores. Quod at praesentium aperiam iure! Saepe, soluta dolorum dolorem magni autem reiciendis dignissimos laboriosam nisi at. Quas qui autem ipsum dolor, nostrum possimus amet saepe corrupti. Dignissimos atque soluta delectus perspiciatis aut libero iste?</p>-->
     </div>
 </body>
 </html>
