--- a/web/sandbox/dynamic-viewports/index.html
+++ b/web/sandbox/dynamic-viewports/index.html
@@ -16,7 +16,7 @@
             padding: 20px;
         }
 
-        .dv-box{
+        .dvh-box{
             height: 100dvh;
             background: tomato;
         }
